<resources>
    <string name="app_name">Vazare</string>
    <string name="menu_settings">Configurações</string>


    <string name="notification_title">Chegou a hora de dar um VAZARE!</string>
    <string name="notification_text_15">Restam 15 minutos para bater o ponto.</string>
    <string name="notification_text_10">Restam 10 minutos para bater o ponto.</string>
    <string name="notification_text_5">Restam 5 minutos para bater o ponto.</string>
    <string name="notification_text_2">Corra!!! Você ainda pode bater o ponto.</string>
    <string name="notification_text_1">Acabaram os minutos restantes para bater o ponto.</string>
    <string name="update">Update Notification</string>
    <string name="ignore">Ignorar!</string>
    <string name="notify_me">Notify Me!</string>
    <string name="notification_updated">Notification Updated!</string>
    <string name="notification_channel_name">Vazare Notification</string>
    <string name="notification_channel_description">Notification from Vazare</string>
    <string name="horas_extras_0147">Você COMPLETOU 10 horas de trabalho ja devia ter batido o ponto e dado um VAZARE!</string>
    <string name="horas_trabalhadas">Você completou seu horário PADRÃO de trabalho e agora pode dar um VAZARE!</string>
    <string name="menu_night_mode">Modo Noturno</string>
    <string name="day_mode">Modo Dia</string>
    <string name="time_to_go">TIME TO GO</string>
    <string name="add_banco_de_horas">Adicionar Banco de Horas</string>
    <string name="calcular">Calcular</string>
    <string name="horas_trabalhadas_label">TRABALHADAS</string>
    <string name="timer">TIMER</string>
    <string name="saida">Saída</string>
    <string name="start">Entrada</string>
    <string name="duracao">DURAÇÃO</string>
    <string name="select_time">Selecione o horário</string>
    <string name="pedir_corrida">Pedir Corrida</string>
    <string name="hours_worked">Horas trabalhadas finalizadas</string>
    <string name="close">Fechar</string>
    <string name="close_popup">Fechando pop up</string>
    <string name="put_hour_initial">Informe a hora de entrada!</string>
    <string name="validate_return_lunch">Por favor preencher a saída para o almoço.</string>
    <string name="validate_return_lunch_bigger">A entrada do almoço deve ser maior que a saída para o almoço.</string>
    <string name="clear_values">Valores redefinidos com sucesso!</string>
    <string name="not_clear_values">Os campos estão vazios!</string>
    <string name="hello_label">Hello</string>
    <string name="name_label">Dijon Braga</string>
    <string name="face_description">Face of the person</string>
    <string name="clock_description">Clock image</string>
    <string name="_04_00_00_">04:00:00</string>
    <string name="_07_00_">07:00</string>
    <string name="_17_00_">17:00</string>
    <string name="_11_00_">11:00</string>
    <string name="_12_00_">12:00</string>
    <string name="_08_15">08:15</string>
    <string name="bank_of_hours_hint">Bank of Hours</string>
    <string name="bank_of_hours_label">BH</string>
    <string name="menu_notification">Notificações</string>
    <string name="menu_about">Sobre</string>
    <string name="title_activity_settings_manager">SettingsManagerActivity</string>

    <!-- Preference Titles -->
    <string name="general_header">Configurações Gerais</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="night_mode_summary_off">O modo noturno pode ser habilitado a qualquer momento</string>
    <string name="night_mode_summary_on">Você pode sair do modo noturno a qualquer momento</string>
    <string name="name_title">Defina seu nome</string>
    <string name="hour_defalt_title">Defina o horário padrão de trabalho</string>
    <string name="max_hour_title">Defina o horário máximo de trabalho</string>
</resources>
