<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="user_name"
            app:title="@string/name_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="hour_default"
            app:title="@string/hour_defalt_title"
            android:inputType="numberDecimal"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/menu_night_mode">

        <SwitchPreferenceCompat
            app:key="key_night_mode"
            app:title="@string/menu_night_mode"
            app:summaryOff="@string/night_mode_summary_off"
            app:summaryOn="@string/night_mode_summary_on"
            />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>